2003-03-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdAH.c (Tcl_FormatObjCmd): Only add the modifier
	that indicates we've got a wide int when we're formatting in an
	integer style.  Stops some libc's from going mad.  [Bug #702622]
	Also tidied whitespace.

2003-03-13  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/makefile.vc: Backed the version to 8.4 on the 8.4 branch.
	(I just loathe sticky tags).
	
2003-03-12  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	Removed TCL_PREFIX_IDENT and TCL_DEBUG_IDENT
	* win/tclWinPipe.c:	from tcl.h -- they are not part of Tcl's
	public interface.  Put them in win/tclWinPipe.c where they are used.

	* generic/tclCmdMZ.c (Tcl_SubstObj):	Corrected and added test for
	* tests/subst.test (subst-2.4):		Tcl_SubstObj's incorrect
	halting of substitution at the first \x00 byte.  [Bug 685106]

	* generic/tclInterp.c (Tcl_InterpObjCmd):	Corrected and added
	* tests/interp.test (interp-2.13):  		test for option
	parsing beyond objc for [interp create --].  Thanks to Marco Maggi.
	[Bug 702383]

2003-03-11  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/makefile.vc: Added two missing uses of $(DBGX) so that
	tclpip8x.dll loads without panicking on Win9x.
	
2003-03-08  Don Porter  <dgp@users.sourceforge.net>

        * doc/tcltest.n:  Added missing "-body" to example.  Thanks to
        Helmut Giese.  [Bug 700011]

2003-03-06  Don Porter	<dgp@users.sourceforge.net>

	* generic/TclUtf.c (Tcl_UniCharNcasecmp):	Corrected failure to
	* tests/utf.test (utf-25.*):	properly compare Unicode strings of
	different case in a case insensitive manner.  [Bug 699042]

2003-03-03  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.2 TAGGED FOR RELEASE ***

2003-03-03  Daniel Steffen  <das@users.sourceforge.net>

	Mac OS Classic specific fixes:
	* generic/tclIOUtil.c (TclNewFSPathObj): on TCL_PLATFORM_MAC,
	skip potential directory separator at the beginning of addStrRep.