@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCmdAH.c,v 1.27.2.1 2003/03/14 16:19:11 dkf Exp $
+ * RCS: @(#) $Id: tclCmdAH.c,v 1.27.2.2 2003/03/14 21:48:46 dkf Exp $
  */
 
 #include "tclInt.h"
@@ -835,11 +835,12 @@ Tcl_FileObjCmd(dummy, interp, objc, objv)
 		return TCL_ERROR;
 	    }
 	    if (objc == 4) {
-		if (Tcl_GetLongFromObj(interp, objv[3],
-			(long*)(&buf.st_atime)) != TCL_OK) {
+		long newTime;
+
+		if (Tcl_GetLongFromObj(interp, objv[3], &newTime) != TCL_OK) {
 		    return TCL_ERROR;
 		}
-		tval.actime = buf.st_atime;
+		tval.actime = newTime;
 		tval.modtime = buf.st_mtime;
 		if (Tcl_FSUtime(objv[2], &tval) != 0) {
 		    Tcl_AppendStringsToObj(Tcl_GetObjResult(interp),
@@ -1071,12 +1072,13 @@ Tcl_FileObjCmd(dummy, interp, objc, objv)
 		return TCL_ERROR;
 	    }
 	    if (objc == 4) {
-		if (Tcl_GetLongFromObj(interp, objv[3],
-			(long*)(&buf.st_mtime)) != TCL_OK) {
+		long newTime;
+
+		if (Tcl_GetLongFromObj(interp, objv[3], &newTime) != TCL_OK) {
 		    return TCL_ERROR;
 		}
 		tval.actime = buf.st_atime;
-		tval.modtime = buf.st_mtime;
+		tval.modtime = newTime;
 		if (Tcl_FSUtime(objv[2], &tval) != 0) {
 		    Tcl_AppendStringsToObj(Tcl_GetObjResult(interp),
 			    "could not set modification time for file \"",
